# freebox_failover

./: MANIFEST.in  README.md  cloud-init-user-data.yaml  freebox-failover.spec  freebox_failover.conf  freebox_failover.py  freebox_failover.service  freebox_failover_register.py  pyproject.toml  requirements.txt
.copr/: Makefile
systemd/: freebox_failover.env
